<!--
  ~ My Digital Safe, the secure notepad Android app.
  ~ Copyright (C) 2018 Security First Designs
  ~
  ~ My Digital Safe is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <a href="www.gnu.org/licenses/">here</a>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/preferenceChangePassword"
        android:summary="Update your login password."
        android:title="Change Password" />

    <!--<Preference-->
        <!--android:key="@string/preferenceAdjustSecurityLevel"-->
        <!--android:summary="Here you can change the level of your password security."-->
        <!--android:title="Password Security Level" />-->

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/preferenceSecurityQuestionsToggle"
        android:summary="Security questions can be created to reset your password in case you forget it."
        android:title="Enable Password Reset" />

    <Preference
        android:key="@string/preferenceConfigureSecurityQuestions"
        android:summary="Manage the security questions for your password reset."
        android:title="Your Security Questions" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/preferenceSecurityExponentialLockout"
        android:summary="This protects against an excessive number of failed password attempts."
        android:title="Enable Lockout" />

    <ListPreference
        android:key="@string/preferenceExponentialLockoutAllowedFails"
        android:entries="@array/exponentialLockoutOptions"
        android:entryValues="@array/exponentialLockoutValues"
        android:defaultValue="5"
        android:summary="You can customize how many failed logins will be allowed before lockout."
        android:title="Number of Failed Login Attempts:" />

</PreferenceScreen>
